cmake_minimum_required(VERSION 3.22)

project(CppRepos CXX)

add_subdirectory(${PROJECT_SOURCE_DIR}/ini_file ini_file)
add_subdirectory(${PROJECT_SOURCE_DIR}/priority_collection_2 priority_collection_2)
add_subdirectory(${PROJECT_SOURCE_DIR}/second_index second_index)
add_subdirectory(${PROJECT_SOURCE_DIR}/set_iterator_next set_iteraor)
add_subdirectory(${PROJECT_SOURCE_DIR}/hesh_set hesh_set)
add_subdirectory(${PROJECT_SOURCE_DIR}/spendings_xml spendings_xml)
add_subdirectory(${PROJECT_SOURCE_DIR}/collision collision)
add_subdirectory(${PROJECT_SOURCE_DIR}/comment_server comment_server)
add_subdirectory(${PROJECT_SOURCE_DIR}/hash_person hash_person)
add_subdirectory(${PROJECT_SOURCE_DIR}/hash_pointer hash_pointer)
add_subdirectory(${PROJECT_SOURCE_DIR}/StageAggregator StageAggregator)
add_subdirectory(${PROJECT_SOURCE_DIR}/xml2json xml2json)
add_subdirectory(${PROJECT_SOURCE_DIR}/object_pool object_pool)
add_subdirectory(${PROJECT_SOURCE_DIR}/polynomial polynomial)
add_subdirectory(${PROJECT_SOURCE_DIR}/zoo zoo)
add_subdirectory(${PROJECT_SOURCE_DIR}/pipeline pipeline)
add_subdirectory(${PROJECT_SOURCE_DIR}/expressions_tree expressions_tree)

